Add a script and libraries to graph our dependencies
This is intended to help with charting a path for upgrades

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ platforms=Operating System :: OS Independent
 
 [options]
 install_requires =
+    packaging
+    virtualenv
+    requests
+    jinja2
+    diskcache
 tests_require=
     pytest
     coverage
